@@ -1,3 +1,9 @@
+2008-02-06 Andreas Schmitz <schmitz@lat-lon.de>
+      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
+      src/org/openjump/util/SLDImporter.java,
+      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
+      Fixed/enhanced import/export of color theming styles.
+
 2008-02-04 Andreas Schmitz <schmitz@lat-lon.de>
       src/language/jump_it.properties,
       src/language/jump_fi.properties,
